--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -10,70 +10,88 @@
       </ul>
     </div>
   <% end %>
-  <div class="form-group">
-    <%= f.label :proyecto, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= f.collection_select :proyecto_id, Proyecto.order(:nombre), :id, :nombre,{}, class: "form-control" %>   
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :Modulo, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= f.collection_select :modulo_id, Modulo.order(:nombre), :id, :nombre,{}, class: "form-control" %>   
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label "Planta", :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= f.collection_select :lugar_id, Lugar.order(:nombre), :id, :nombre,{}, class: "form-control" %>   
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label "Responsable Sistema", :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= collection_select(:tarea, :responsable_sistema_id, Responsable.all, :id, :nombre,{}) %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label "Responsable Planta", :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= collection_select(:tarea, :responsable_planta_id, Responsable.all, :id, :nombre,{}) %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :nombre, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_field :nombre, :class => "form-control" %>
-    </div>
+  <div class="row clearfix">
+	  <div class="col-md-6 column">
+		  <div class="form-group">
+				  <%= f.label :nombre, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.text_field :nombre, :class => "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label :hh, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.text_field :hh, :class => "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label :actividad, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.text_area :actividad, rows: 4, :class => "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label :fecha_registro, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.date_select :fecha_registro, :class => "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label :observaciones, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.text_area :observaciones, :class => "form-control" %>
+				  </div>
+			  </div>
+		  </div>
+
+		  
+	  <div class="col-md-6 column">
+			  <div class="form-group">
+				  <%= f.label :proyecto, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.collection_select :proyecto_id, Proyecto.order(:nombre), :id, :nombre,{}, class: "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label :modulo, :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.collection_select :modulo_id, Modulo.order(:nombre), :id, :nombre,{}, class: "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label "Planta", :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.collection_select :lugar_id, Lugar.order(:nombre), :id, :nombre,{}, class: "form-control" %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label "Responsable Sistema", :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.collection_select(:responsable_sistema_id, Responsable.all, :id, :nombre,{}, class: "form-control") %>
+				  </div>
+			  </div>
+			  <div class="form-group">
+				  <%= f.label "Responsable Planta", :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= f.collection_select(:responsable_planta_id, Responsable.all, :id, :nombre,{}, class: "form-control") %> 	
+				  </div>
+			  </div>
+		  </div>
+
   </div>
 
-  <div class="form-group">
-    <%= f.label :hh, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_field :hh, :class => "form-control" %>
-    </div>
+<div class="row">
+  <div class="col-md-6 column">
   </div>
-  <div class="form-group">
-    <%= f.label :actividad, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_area :actividad, :class => "form-control" %>
-    </div>
+  <div class="col-md-6 column">
+	  <div class="form-group">
+		  <%= f.label " ", :class => "col-sm-4 control-label" %>
+		  <div class="col-sm-6">
+			  <%= f.submit :class => "btn btn-primary" %>
+		  </div>
+	  </div>
   </div>
-  <div class="form-group">
-	  <%= f.label :fecha_registro, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.date_select :fecha_registro, :class => "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :observaciones, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_area :observaciones, :class => "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
-      <%= f.submit :class => "btn btn-primary" %>
-    </div>
-  </div>
+</div>
+
+
 <% end  %>
