--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
+<%= form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @tarea.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@tarea.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -58,31 +58,31 @@
 			  <div class="form-group">
 				  <%= f.label :proyecto, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.collection_select :proyecto_id, Proyecto.order(:nombre), :id, :nombre,{}, class: "form-control" %>
+					  <%= f.grouped_collection_select :proyecto_id, Cliente.order(:nombre), :proyectos, :nombre, :id, :nombre,{}, class: "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
 				  <%= f.label :modulo, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.collection_select :modulo_id, Modulo.order(:nombre), :id, :nombre,{}, class: "form-control" %>
+					  <%= f.grouped_collection_select :modulo_id, Cliente.order(:nombre), :modulos, :nombre, :id, :nombre,{}, class: "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
 				  <%= f.label "Planta", :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.collection_select :lugar_id, Lugar.order(:nombre), :id, :nombre,{}, class: "form-control" %>
+					  <%= f.grouped_collection_select :lugar_id, Cliente.order(:nombre), :lugares, :nombre, :id, :nombre,{}, class: "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
 				  <%= f.label "Responsable Sistema", :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.collection_select(:responsable_sistema_id, Responsable.all, :id, :nombre,{}, class: "form-control") %>
+					  <%= f.grouped_collection_select(:responsable_sistema_id, Lugar.order(:nombre), :responsables, :nombre, :id, :nombre,{}, class: "form-control") %>
 				  </div>
 			  </div>
 			  <div class="form-group">
 				  <%= f.label "Responsable Planta", :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.collection_select(:responsable_planta_id, Responsable.all, :id, :nombre,{}, class: "form-control") %> 	
+					  <%= f.grouped_collection_select(:responsable_planta_id, Lugar.order(:nombre), :responsables, :nombre, :id, :nombre,{}, class: "form-control") %>
 				  </div>
 			  </div>
 		  </div>
